--- a/index.html
+++ b/index.html
@@ -159,27 +159,27 @@
 <script>
   // Basit veri seti (örnek)
   const cars = [
-    {id:1, brand:'Toyota', model:'Corolla 1.6 Vision', year:2020, km:52000, price:875000, fuel:'Benzin', gear:'Otomatik', 
+    {id:1, brand:'Mercedes', model:'CLS350cdi 3.0 V6', year:2011, km:230000, price:2500000, fuel:'Dizel', gear:'Otomatik', 
      img:'https://images.unsplash.com/photo-1542281286-9e0a16bb7366?q=80&w=1200&auto=format&fit=crop',
-     desc:'Yetkili servis bakımlı, tek parça boya yok.'},
-    {id:2, brand:'Volkswagen', model:'Golf 1.4 TSI', year:2017, km:98000, price:765000, fuel:'Benzin', gear:'Manuel',
+     desc:'Stage2 350+HP.'},
+    {id:2, brand:'Hyundai', model:'I30 1.4', year:2008, km:181.000, price:765000, fuel:'Benzin', gear:'Manuel',
      img:'https://images.unsplash.com/photo-1503376780353-7e6692767b70?q=80&w=1200&auto=format&fit=crop',
      desc:'Hatassız, değişensiz. Ekstra kış lastikleri hediye.'},
-    {id:3, brand:'BMW', model:'320i M Sport', year:2019, km:64000, price:1845000, fuel:'Benzin', gear:'Otomatik',
+    {id:3, brand:'Hyundai', model:'Tucson 1.6', year:2018, km:120000, price:1300000, fuel:'Benzin', gear:'Otomatik',
      img:'https://images.unsplash.com/photo-1549921296-3a6b2c8f9f49?q=80&w=1200&auto=format&fit=crop',
-     desc:'M paket, sunroof, deri döşeme, performans paketi.'},
+     desc:'Sunroof,kazasız boyasız ilk sahibinden.'},
     {id:4, brand:'Renault', model:'Clio 1.5 dCi', year:2016, km:120000, price:495000, fuel:'Dizel', gear:'Manuel',
      img:'https://images.unsplash.com/photo-1552519507-da3b142c6e3d?q=80&w=1200&auto=format&fit=crop',
      desc:'Ekonomik yakıt, şehir içi ideal.'},
-    {id:5, brand:'Hyundai', model:'i20 1.4', year:2021, km:36000, price:865000, fuel:'Benzin', gear:'Otomatik',
+    {id:5, brand:'Volkswagen', model:'Passat 1.5tsi', year:2020, km:85000, price:1700000, fuel:'Benzin', gear:'Otomatik',
      img:'https://images.unsplash.com/photo-1533473359331-0135ef1b58bf?q=80&w=1200&auto=format&fit=crop',
-     desc:'Düşük km, garanti devam ediyor.'},
-    {id:6, brand:'Mercedes', model:'C200 AMG', year:2018, km:88000, price:2150000, fuel:'Benzin', gear:'Otomatik',
+     desc:'Serseriden, serseriye.'},
+    {id:6, brand:'Byd', model:'Seal', year:2025, km:5500, price:2300000, fuel:'Elektrik/Gay', gear:'Otomatik',
      img:'https://images.unsplash.com/photo-1549924231-f129b911e442?q=80&w=1200&auto=format&fit=crop',
-     desc:'AMG donanım, full paket.'},
-    {id:7, brand:'Peugeot', model:'3008 1.6 BlueHDi', year:2019, km:101000, price:1420000, fuel:'Dizel', gear:'Otomatik',
+     desc:'Enes Batur kazalı. Pert.'},
+    {id:7, brand:'Toyota', model:'Corolla Cross 1.8', year:2023, km:50000, price:2000000, fuel:'Benzin + Elektrik', gear:'Otomatik',
      img:'https://images.unsplash.com/photo-1511919884226-fd3cad34687c?q=80&w=1200&auto=format&fit=crop',
-     desc:'SUV, geniş iç hacim, uzun yolda konforlu.'},
+     desc:'Mühendisten temiz aile aracı.'},
     {id:8, brand:'Fiat', model:'Egea 1.3 Multijet', year:2018, km:135000, price:575000, fuel:'Dizel', gear:'Manuel',
      img:'https://images.unsplash.com/photo-1526726538690-5cbf956ae2fd?q=80&w=1200&auto=format&fit=crop',
      desc:'Uygun maliyetli, bakımları yeni yapıldı.'},
