--- a/index.html
+++ b/index.html
@@ -161,28 +161,28 @@
   // İLANLAR (senin foto adlarınla)
   const cars = [
     {id:1, brand:'Mercedes',   model:'CLS350cdi 3.0 V6', year:2011, km:230000, price:2500000, fuel:'Dizel',              gear:'Otomatik',
-     img:'arabalar/CLS.jpg',            desc:'Stage2 350+HP.'},
+     img:'CLS.jpg',            desc:'Stage2 350+HP.'},
 
     {id:2, brand:'Hyundai',    model:'I30 1.4',          year:2008, km:181000, price:765000,  fuel:'Benzin',            gear:'Manuel',
-     img:'arabalar/i30.jpg',            desc:'Hatassız, değişensiz. Ekstra kış lastikleri hediye.'},
+     img:'i30.jpg',            desc:'Hatassız, değişensiz. Ekstra kış lastikleri hediye.'},
 
     {id:3, brand:'Hyundai',    model:'Tucson 1.6',       year:2018, km:120000, price:1300000, fuel:'Benzin',            gear:'Otomatik',
-     img:'arabalar/Tucson.jpg',         desc:'Sunroof, kazasız boyasız, ilk sahibinden.'},
+     img:'Tucson.jpg',         desc:'Sunroof, kazasız boyasız, ilk sahibinden.'},
 
     {id:4, brand:'Renault',    model:'Clio 1.5 dCi',     year:2016, km:120000, price:495000,  fuel:'Dizel',             gear:'Manuel',
-     img:'arabalar/Clio.jpg',           desc:'Ekonomik yakıt, şehir içi ideal.'},
+     img:'Clio.jpg',           desc:'Ekonomik yakıt, şehir içi ideal.'},
 
     {id:5, brand:'Volkswagen', model:'Passat 1.5 TSI',   year:2020, km:85000,  price:1700000, fuel:'Benzin',            gear:'Otomatik',
-     img:'arabalar/Passat.jpg',         desc:'Temiz kullanılmış, düzenli bakımlı.'},
+     img:'Passat.jpg',         desc:'Temiz kullanılmış, düzenli bakımlı.'},
 
     {id:6, brand:'Byd',        model:'Seal',             year:2025, km:5500,   price:2300000, fuel:'Elektrik',          gear:'Otomatik',
-     img:'arabalar/Byd.jpg',            desc:'Yeni nesil tam elektrikli sedan.'},
+     img:'Byd.jpg',            desc:'Yeni nesil tam elektrikli sedan.'},
 
     {id:7, brand:'Toyota',     model:'Corolla Cross 1.8',year:2023, km:50000,  price:2000000, fuel:'Benzin + Elektrik', gear:'Otomatik',
-     img:'arabalar/CorollaCross.jpg',   desc:'Hibrit, düşük tüketim, aile aracı.'},
+     img:'CorollaCross.jpg',   desc:'Hibrit, düşük tüketim, aile aracı.'},
 
     {id:8, brand:'Fiat',       model:'Egea 1.3 Multijet',year:2018, km:135000, price:575000,  fuel:'Dizel',             gear:'Manuel',
-     img:'arabalar/812Ferrari.jpg',     desc:'Uygun maliyetli, bakımları yeni yapıldı.'}
+     img:'812Ferrari.jpg',     desc:'Uygun maliyetli, bakımları yeni yapıldı.'}
   ];
 
   const $ = sel => document.querySelector(sel);
@@ -291,3 +291,4 @@
 </script>
 </body>
 </html>
+
