--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
     <div class="hero-visual">
       <!-- İlk görsel CLS -->
-      <img src="arabalar/CLS.jpg" alt="Mercedes CLS" />
+      <img src="CLS.jpg" alt="Mercedes CLS" />
     </div>
   </section>
 
@@ -291,4 +291,5 @@
 </script>
 </body>
 </html>
+
 
