--- a/index.html
+++ b/index.html
@@ -24,8 +24,25 @@
     .hero{margin:24px 0 12px;padding:20px;border-radius:var(--radius);background:linear-gradient(135deg,rgba(34,211,238,.12),rgba(167,139,250,.10));border:1px solid rgba(255,255,255,.08);box-shadow:var(--shadow);display:grid;grid-template-columns:1.2fr 1fr;gap:20px;align-items:center}
     .hero h1{margin:0 0 8px;font-size:clamp(22px,4vw,36px)}
     .hero p{margin:0;color:var(--muted)}
-    .hero-visual{aspect-ratio:16/9;border-radius:18px;overflow:hidden;border:1px solid rgba(255,255,255,.08)}
-    .hero-visual img{width:100%;height:100%;object-fit:cover;display:block}
+    .hero-visual{
+  height: 320px;
+  border-radius: 18px;
+  overflow: hidden;
+  border: 1px solid rgba(255,255,255,.08);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #0b1224;
+}
+.hero-visual img{
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  object-fit: contain;
+  display: block;
+}
+
 
     .filters{margin:12px 0 8px;padding:12px;border-radius:14px;background:rgba(2,6,23,.45);border:1px solid rgba(255,255,255,.08);display:grid;gap:10px}
     .filters .row{display:grid;gap:10px;grid-template-columns:1.2fr repeat(4,1fr) 1fr}
@@ -291,5 +308,6 @@
 </script>
 </body>
 </html>
+
 
 
