--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <section class="hero">
     <div>
       <h1>KerimOto — Araba İlanları</h1>
-      <p>HTML + CSS + ufak JS ile filtrelenebilir ilan sayfası. Öğrenme ve demo amaçlı.</p>
+      <p> Araç alım satım sayfası. Öğrenme ve demo amaçlı.</p>
     </div>
     <div class="hero-visual">
       <!-- İlk görsel CLS -->
@@ -405,6 +405,7 @@ window.rejectPending = (i)=>{
 </script>
 </body>
 </html>
+
 
 
 
