--- a/index.html
+++ b/index.html
@@ -80,12 +80,18 @@
       .grid{grid-template-columns:1fr}
     }
     .logo-img{
-  width:36px;
-  height:36px;
+  width:32px;
+  height:32px;
   display:block;
-  border-radius:50%;
+  border-radius:6px;
   object-fit:cover;
 }
+    .brand{
+  display:flex;
+  align-items:center;
+  gap:8px;
+}
+
   </style>
 </head>
 <body>
@@ -447,4 +453,5 @@
 </script>
 </body>
 </html>
+
 
